# squire

./: Cargo.toml  Makefile  README.md  code.nox  instructionset.txt
demo/: dir_printer.asm  entry_points.asm  file_printer.asm  file_runner.asm  greet.asm  raytest.asm  word_split.asm
demo/kernel/: Makefile  README  kernel.S  kernel.d  kernel.s  kernel0.asm  kernel1.asm  kernel2.asm  kernel3.asm  kernel_last.asm  kernel_syscalls.txt  readme.txt
demo/kernel/programs/: test0.S  test0.asm  test0.s  test1.S  test1.asm  test1.s
demo/linking/: link0.asm  link1.asm  link2.asm
src/: debug.rs  executable.rs  instructions.rs  lib.rs  link.rs  macro.rs
src/asm/: asm.rs  main.rs
src/dasm/: disasm.rs  main.rs
src/lang/: eval.rs  main.rs  parse.rs  preproc.rs  token.rs
src/vm/: fs.rs  main.rs  ray.rs  render.rs  vm.rs
