[package]
name = "squire"
version = "0.9.5"
edition = "2021"

[[bin]]
name = "squire_vm"
path = "src/vm/main.rs"

[[bin]]
name = "squire_asm"
path = "src/asm/main.rs"

[[bin]]
name = "squire_lang"
path = "src/lang/main.rs"

[[bin]]
name = "squire_dasm"
path = "src/dasm/main.rs"

[dependencies]
colored = "3.0.0"
crossterm = "0.29.0"
