[package]
name = "erebos"
version = "0.9.5"
edition = "2021"

[[bin]]
name = "erebos_vm"
path = "src/vm/main.rs"

[[bin]]
name = "erebos_asm"
path = "src/asm/main.rs"

[[bin]]
name = "erebos_lang"
path = "src/lang/main.rs"

[[bin]]
name = "erebos_dasm"
path = "src/dasm/main.rs"

[dependencies]
colored = "3.0.0"
crossterm = "0.29.0"
raylib = "5.5.1"

[lints.rust]
unused_parens = "allow"

[lints.clippy]
type-complexity = "allow"
too-many-arguments = "allow"

